Update URL for favicon

--- a/5-best-tools-for-remote-working.html
+++ b/5-best-tools-for-remote-working.html
@@ -24,7 +24,7 @@ permalink: /5-best-tools-for-remote-working/
         <meta property="og:description" content="Remote working tools have recently grown in popularity, but which ones are the best for you? Read my article on my 5 favourite tools." />
         <meta property="og:url" content="https://sybilmayard.tech/5-best-tools-for-remote-working/" />
         <meta property="og:site_name" content="Sybiltech" />
-        <meta property="og:image" content="https://stm-2018.github.io/favicon.png" />
+        <meta property="og:image" content="https://sybilmayard.tech/favicon.png" />
         <meta name="twitter:card" content="summary_large_image" />
         <meta name="twitter:creator" content="@Sybiltech1" />
         <meta name="twitter:site" content="@sybiltech1" />
@@ -38,7 +38,7 @@ permalink: /5-best-tools-for-remote-working/
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <link href="https://fonts.googleapis.com/css2?family=Varela+Round&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,700&display=swap" rel="stylesheet">
-        <link rel="icon" type="image/png" href="https://stm-2018.github.io/favicon.png">
+        <link rel="icon" type="image/png" href="https://sybilmayard.tech/favicon.png">
     </head>
     <body>
         <div class="header">
