--- a/blog.html
+++ b/blog.html
@@ -27,7 +27,7 @@ permalink: /blog/
         action to take at each round." />
         <meta property="og:url" content="https://sybilmayard.tech/blog/" />
         <meta property="og:site_name" content="Sybiltech" />
-        <meta property="og:image" content="https://stm-2018.github.io/favicon.png" />
+        <meta property="og:image" content="https://sybilmayard.tech/favicon.png" />
         <meta name="twitter:card" content="summary_large_image" />
         <meta name="twitter:creator" content="@Sybiltech1" />
         <meta name="twitter:site" content="@sybiltech1" />
@@ -41,7 +41,7 @@ permalink: /blog/
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <link href="https://fonts.googleapis.com/css2?family=Varela+Round&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,700&display=swap" rel="stylesheet">
-        <link rel="icon" type="image/png" href="https://stm-2018.github.io/favicon.png">
+        <link rel="icon" type="image/png" href="https://sybilmayard.tech/favicon.png">
     </head>
     <body>
         <div class="header">
