--- a/clients.html
+++ b/clients.html
@@ -24,7 +24,7 @@ permalink: /clients/
         <meta property="og:description" content="Sybil Mayard has worked with a range of clients, providing the services needed to help them achieve their business goals. See a selection of projects here." />
         <meta property="og:url" content="https://sybilmayard.tech/clients/" />
         <meta property="og:site_name" content="Sybiltech" />
-        <meta property="og:image" content="https://stm-2018.github.io/favicon.png" />
+        <meta property="og:image" content="https://sybilmayard.tech/favicon.png" />
         <meta name="twitter:card" content="summary_large_image" />
         <meta name="twitter:creator" content="@Sybiltech1" />
         <meta name="twitter:site" content="@sybiltech1" />
@@ -38,7 +38,7 @@ permalink: /clients/
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <link href="https://fonts.googleapis.com/css2?family=Varela+Round&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,700&display=swap" rel="stylesheet">
-        <link rel="icon" type="image/png" href="https://stm-2018.github.io/favicon.png">
+        <link rel="icon" type="image/png" href="https://sybilmayard.tech/favicon.png">
     </head>
     <body>
         <div class="header">
