Change GitHub URLs to sybilmayard.tech

--- a/clients.html
+++ b/clients.html
@@ -44,7 +44,7 @@ permalink: /clients/
         <div class="header">
             <div class="container-1000">
                 <div class="logo">
-                    <a href="/"><img src="https://stm-2018.github.io/images/sybiltech-logo-small.jpg" alt="Sybiltech logo"></a>
+                    <a href="/"><img src="https://sybilmayard.tech/images/sybiltech-logo-small.jpg" alt="Sybiltech logo"></a>
                 </div>
             </div>
         </div>
@@ -52,17 +52,17 @@ permalink: /clients/
             <div class="container-1000 center">
                 <div class="topnav" id="myTopnav">
                     <a href="/">Home</a>                    
-                    <a href="https://stm-2018.github.io/events">Events</a>
-                    <a href="https://stm-2018.github.io/building-business-shopify">Shopify Course</a>                   
+                    <a href="https://sybilmayard.tech/events">Events</a>
+                    <a href="https://sybilmayard.tech/building-business-shopify">Shopify Course</a>                   
                     <div class="dropdown">
                         <button class="dropbtn">About
                             <i class="fa fa-caret-down"></i>
                         </button>
                         <div class="dropdown-content">
-                            <a href="https://stm-2018.github.io/about">About</a>
-                            <a href="https://stm-2018.github.io/clients">Clients</a>
-                            <a href="https://stm-2018.github.io/services">Services</a>
-                            <a href="https://stm-2018.github.io/faqs">FAQs</a>
+                            <a href="https://sybilmayard.tech/about">About</a>
+                            <a href="https://sybilmayard.tech/clients">Clients</a>
+                            <a href="https://sybilmayard.tech/services">Services</a>
+                            <a href="https://sybilmayard.tech/faqs">FAQs</a>
                         </div>
                     </div>                    
                     <div class="dropdown">
@@ -70,10 +70,10 @@ permalink: /clients/
                             <i class="fa fa-caret-down"></i>
                         </button>
                         <div class="dropdown-content">
-                            <a href="https://stm-2018.github.io/vidcareer">VidCareer</a>
-                            <a href="https://stm-2018.github.io/an-android-app-for-an-educational-poker-platform">An Android App for an Educational Poker Platform</a>
-                            <a href="https://stm-2018.github.io/tagnav">TagNav</a>
-                            <a href="https://stm-2018.github.io/my-personal-portfolio">My Personal Portfolio</a>
+                            <a href="https://sybilmayard.tech/vidcareer">VidCareer</a>
+                            <a href="https://sybilmayard.tech/an-android-app-for-an-educational-poker-platform">An Android App for an Educational Poker Platform</a>
+                            <a href="https://sybilmayard.tech/tagnav">TagNav</a>
+                            <a href="https://sybilmayard.tech/my-personal-portfolio">My Personal Portfolio</a>
                         </div>
                     </div>
                     <div class="dropdown">
@@ -81,13 +81,13 @@ permalink: /clients/
                             <i class="fa fa-caret-down"></i>
                         </button>
                         <div class="dropdown-content">
-                            <a href="https://stm-2018.github.io/6-reasons-to-use-shopify">6 Reasons Why You Should Be Using Shopify</a>
-                            <a href="https://stm-2018.github.io/webtip-wednesday-series-launched-on-twitter">WebTip Wednesday Series Launched on Twitter</a>
-                            <a href="https://stm-2018.github.io/5-best-tools-for-remote-working">5 Best Tools For Remote Working</a>
-                            <a href="https://stm-2018.github.io/6-tips-for-surviving-remote-working">6 Tips For Surviving Remote Working</a>
+                            <a href="https://sybilmayard.tech/6-reasons-to-use-shopify">6 Reasons Why You Should Be Using Shopify</a>
+                            <a href="https://sybilmayard.tech/webtip-wednesday-series-launched-on-twitter">WebTip Wednesday Series Launched on Twitter</a>
+                            <a href="https://sybilmayard.tech/5-best-tools-for-remote-working">5 Best Tools For Remote Working</a>
+                            <a href="https://sybilmayard.tech/6-tips-for-surviving-remote-working">6 Tips For Surviving Remote Working</a>
                         </div>
                     </div>
-                    <a href="https://stm-2018.github.io/contact">Contact</a>
+                    <a href="https://sybilmayard.tech/contact">Contact</a>
                     <a href="javascript:void(0);" class="icon" onclick="myFunction()">
                         <i class="fa fa-bars"></i>
                     </a>
@@ -109,7 +109,7 @@ permalink: /clients/
                 <div id="pathways-21"class="shadow-box-2">
                     <div class="row-2">
                         <div class="col-4">
-                            <img src="https://stm-2018.github.io/images/clients/Pathways-21.png" alt="Pathways 21">
+                            <img src="https://sybilmayard.tech/images/clients/Pathways-21.png" alt="Pathways 21">
                         </div>
                         <div class="col-8">
                             <h2>Pathways 21 (WordPress)</h2>
@@ -128,7 +128,7 @@ permalink: /clients/
                 <div id="cnt-associates" class="shadow-box-2">                         
                     <div class="row-2">
                         <div class="col-4">   
-                            <img src="https://stm-2018.github.io/images/clients/CNT-Associates.png" alt="CNT Associates">                         
+                            <img src="https://sybilmayard.tech/images/clients/CNT-Associates.png" alt="CNT Associates">                         
                         </div>
                         <div class="col-8">
                             <h2>CNT Associates</h2>
@@ -147,7 +147,7 @@ permalink: /clients/
                 <div id="find-the-balance" class="shadow-box-2">                         
                     <div class="row-2">
                         <div class="col-4">   
-                            <img src="https://stm-2018.github.io/images/clients/find-the-balance.PNG" alt="Find the Balance">                         
+                            <img src="https://sybilmayard.tech/images/clients/find-the-balance.PNG" alt="Find the Balance">                         
                         </div>
                         <div class="col-8">
                             <h2>Find the Balance (Squarespace)</h2>
@@ -166,7 +166,7 @@ permalink: /clients/
                 <div id="audrey-zeitoun-coaching" class="shadow-box-2">                         
                     <div class="row-2">
                         <div class="col-4">   
-                            <img src="https://stm-2018.github.io/images/clients/Audrey-Zeitoun-Coaching.png" alt="Audrey Zeitoun Coaching">                         
+                            <img src="https://sybilmayard.tech/images/clients/Audrey-Zeitoun-Coaching.png" alt="Audrey Zeitoun Coaching">                         
                         </div>
                         <div class="col-8">
                             <h2>Audrey Zeitoun Coaching (Wix)</h2>
@@ -186,7 +186,7 @@ permalink: /clients/
                 <div id="blue-horizon-lnw" class="shadow-box-2">                         
                     <div class="row-2">
                         <div class="col-4">   
-                            <img src="https://stm-2018.github.io/images/clients/Blue-Horizon-LNW.png" alt="Blue Horizon LNW">                         
+                            <img src="https://sybilmayard.tech/images/clients/Blue-Horizon-LNW.png" alt="Blue Horizon LNW">                         
                         </div>
                         <div class="col-8">
                             <h2>Blue Horizon LNW (Bandzoogle)</h2>
@@ -205,7 +205,7 @@ permalink: /clients/
                 <div id="tania-paige-designs" class="shadow-box-2">                         
                     <div class="row-2">
                         <div class="col-4">   
-                            <img src="https://stm-2018.github.io/images/clients/tania-paige-designs.PNG" alt="Tania Paige Designs">                         
+                            <img src="https://sybilmayard.tech/images/clients/tania-paige-designs.PNG" alt="Tania Paige Designs">                         
                         </div>
                         <div class="col-8">
                             <h2>Tania Paige Designs (Shopify)</h2>
@@ -224,7 +224,7 @@ permalink: /clients/
                 <div id="new-haw-community-centre" class="shadow-box-2">                         
                     <div class="row-2">
                         <div class="col-4">   
-                            <img src="https://stm-2018.github.io/images/clients/New-Haw-Community-Centre.png" alt="New Haw Community Centre">                         
+                            <img src="https://sybilmayard.tech/images/clients/New-Haw-Community-Centre.png" alt="New Haw Community Centre">                         
                         </div>
                         <div class="col-8">
                             <h2>New Haw Community Centre (WordPress)</h2>
@@ -245,7 +245,7 @@ permalink: /clients/
                 <div id="esme-learning-solutions" class="shadow-box-2">                         
                     <div class="row-2">
                         <div class="col-4">   
-                            <img src="https://stm-2018.github.io/images/clients/Esme-Learning-Solutions.png" alt="Esme Learning Solutions">                         
+                            <img src="https://sybilmayard.tech/images/clients/Esme-Learning-Solutions.png" alt="Esme Learning Solutions">                         
                         </div>
                         <div class="col-8">
                             <h2>Esme Learning Solutions (Shopify)</h2>
@@ -269,7 +269,7 @@ permalink: /clients/
                 <div id="future-communities-uk" class="shadow-box-2">                         
                     <div class="row-2">
                         <div class="col-4">   
-                            <img src="https://stm-2018.github.io/images/clients/Future-Communities-UK.png" alt="Future Communities UK">                         
+                            <img src="https://sybilmayard.tech/images/clients/Future-Communities-UK.png" alt="Future Communities UK">                         
                         </div>
                         <div class="col-8">
                             <h2>Future Communities UK (WordPress)</h2>
@@ -291,7 +291,7 @@ permalink: /clients/
                 <div id="wardells-wardrobe" class="shadow-box-2">                         
                     <div class="row-2">
                         <div class="col-4">   
-                            <img src="https://stm-2018.github.io/images/clients/wardells-wardrobe.PNG" alt="Wardell's Wardrobe">                         
+                            <img src="https://sybilmayard.tech/images/clients/wardells-wardrobe.PNG" alt="Wardell's Wardrobe">                         
                         </div>
                         <div class="col-8">
                             <h2>Wardell's Wardrobe (Shopify)</h2>
@@ -310,7 +310,7 @@ permalink: /clients/
                 <div id="gdpr-compliance-consultancy" class="shadow-box-2">                         
                     <div class="row-2">
                         <div class="col-4">   
-                            <img src="https://stm-2018.github.io/images/clients/The-GDPR-Compliance-Consultancy.png" alt="The GDPR Compliance Consultancy">                         
+                            <img src="https://sybilmayard.tech/images/clients/The-GDPR-Compliance-Consultancy.png" alt="The GDPR Compliance Consultancy">                         
                         </div>
                         <div class="col-8">
                             <h2>The GDPR Compliance Consultancy (WordPress)</h2>
@@ -330,7 +330,7 @@ permalink: /clients/
                 <div id="swipsearch" class="shadow-box-2">                         
                     <div class="row-2">
                         <div class="col-4">   
-                            <img src="https://stm-2018.github.io/images/clients/SwipSearch.png" alt="SwipSearch">                         
+                            <img src="https://sybilmayard.tech/images/clients/SwipSearch.png" alt="SwipSearch">                         
                         </div>
                         <div class="col-8">
                             <h2>SwipSearch (Wix)</h2>
@@ -349,7 +349,7 @@ permalink: /clients/
                 <div id="kyosk" class="shadow-box-2">                         
                     <div class="row-2">
                         <div class="col-4">   
-                            <img src="https://stm-2018.github.io/images/clients/KYOSK.png" alt="KYOSK">                         
+                            <img src="https://sybilmayard.tech/images/clients/KYOSK.png" alt="KYOSK">                         
                         </div>
                         <div class="col-8">
                             <h2>KYOSK (Shopify)</h2>
@@ -370,7 +370,7 @@ permalink: /clients/
                 <div id="focus-on-learning" class="shadow-box-2">                         
                     <div class="row-2">
                         <div class="col-4">   
-                            <img src="https://stm-2018.github.io/images/clients/focus-on-learning.PNG" alt="Focus on Learning">                         
+                            <img src="https://sybilmayard.tech/images/clients/focus-on-learning.PNG" alt="Focus on Learning">                         
                         </div>
                         <div class="col-8">
                             <h2>Focus on Learning (Squarespace)</h2>
@@ -388,7 +388,7 @@ permalink: /clients/
                 <p>Find out how I can help your business grow further today.</p>
 
                 <div class="padding-bottom padding-top center">
-                    <a class="btn-primary" href="https://stm-2018.github.io/contact">Contact Me</a>
+                    <a class="btn-primary" href="https://sybilmayard.tech/contact">Contact Me</a>
                 </div>
             </div>
         </div>
@@ -396,7 +396,7 @@ permalink: /clients/
                     <h3>Would You Like To Start A Project With Me?</h3>
                     <p class="padding-bottom">Please click the contact button to get in touch with me about your requirements. 
                             I look forward to hearing more about your exciting project.</p>
-                    <div class="center padding-bottom"><a class="btn-contact" href="https://stm-2018.github.io/contact">Contact Me</a></div>
+                    <div class="center padding-bottom"><a class="btn-contact" href="https://sybilmayard.tech/contact">Contact Me</a></div>
         </div>
         <div class="footer section">
             <div class="container-1200">
@@ -409,11 +409,11 @@ permalink: /clients/
                     <div class="col-3">
                         <h4>Links</h4>
                         <p><a href="/">Home</a></p>
-                        <p><a href="https://stm-2018.github.io/about">About</a></p>
-                        <p><a href="https://stm-2018.github.io/services">Services</a></p>
-                        <p><a href="https://stm-2018.github.io/contact">Contact</a></p>
-                        <p><a href="https://stm-2018.github.io/terms-and-conditions">Terms and Conditions</a></p>
-                        <p><a href="https://stm-2018.github.io/privacy-policy">Privacy Policy</a></p>
+                        <p><a href="https://sybilmayard.tech/about">About</a></p>
+                        <p><a href="https://sybilmayard.tech/services">Services</a></p>
+                        <p><a href="https://sybilmayard.tech/contact">Contact</a></p>
+                        <p><a href="https://sybilmayard.tech/terms-and-conditions">Terms and Conditions</a></p>
+                        <p><a href="https://sybilmayard.tech/privacy-policy">Privacy Policy</a></p>
                     </div>
                     <div class="col-3">
                         <h4>Services</h4>
@@ -436,13 +436,13 @@ permalink: /clients/
                                 <i class="fab fa-instagram"></i></a>
                         </p>
                         <div><a href="https://fsb.org.uk" target="_blank" rel="noopener norefrerer">
-                            <img src="https://stm-2018.github.io/images/FSB-Member-Logo-White.png" 
+                            <img src="https://sybilmayard.tech/images/FSB-Member-Logo-White.png" 
                                 alt="FSB logo"></a></div>
                         <div><a href="https://shopify.co.uk" target="_blank" rel="noopener noreferrer">
-                            <img src="https://stm-2018.github.io/images/shopify-partners-logo.png" alt="Shopify Partners logo"></a></div>                        
+                            <img src="https://sybilmayard.tech/images/shopify-partners-logo.png" alt="Shopify Partners logo"></a></div>                        
                     </div>
                 </div>
-                <div class="logo"><img src="https://stm-2018.github.io/images/sybiltech-logo-transparent.png" alt="Sybiltech logo">
+                <div class="logo"><img src="https://sybilmayard.tech/images/sybiltech-logo-transparent.png" alt="Sybiltech logo">
                     <p class="center"><a href="#">Back to top</a></p>
             </div>
             </div>
