--- a/webtip-wednesday-series-launched-on-twitter.html
+++ b/webtip-wednesday-series-launched-on-twitter.html
@@ -44,7 +44,7 @@ permalink: /webtip-wednesday-series-launched-on-twitter/
         <div class="header">
             <div class="container-1000">
                 <div class="logo">
-                    <a href="/"><img src="https://stm-2018.github.io/images/sybiltech-logo-small.jpg" alt="Sybiltech logo"></a>
+                    <a href="/"><img src="https://sybilmayard.tech/images/sybiltech-logo-small.jpg" alt="Sybiltech logo"></a>
                 </div>
             </div>
         </div>
@@ -52,17 +52,17 @@ permalink: /webtip-wednesday-series-launched-on-twitter/
             <div class="container-1000 center">
                 <div class="topnav" id="myTopnav">
                     <a href="/">Home</a>                    
-                    <a href="https://stm-2018.github.io/events">Events</a>
-                    <a href="https://stm-2018.github.io/building-business-shopify">Shopify Course</a>                   
+                    <a href="https://sybilmayard.tech/events">Events</a>
+                    <a href="https://sybilmayard.tech/building-business-shopify">Shopify Course</a>                   
                     <div class="dropdown">
                         <button class="dropbtn">About
                             <i class="fa fa-caret-down"></i>
                         </button>
                         <div class="dropdown-content">
-                            <a href="https://stm-2018.github.io/about">About</a>
-                            <a href="https://stm-2018.github.io/clients">Clients</a>
-                            <a href="https://stm-2018.github.io/services">Services</a>
-                            <a href="https://stm-2018.github.io/faqs">FAQs</a>
+                            <a href="https://sybilmayard.tech/about">About</a>
+                            <a href="https://sybilmayard.tech/clients">Clients</a>
+                            <a href="https://sybilmayard.tech/services">Services</a>
+                            <a href="https://sybilmayard.tech/faqs">FAQs</a>
                         </div>
                     </div>                    
                     <div class="dropdown">
@@ -70,10 +70,10 @@ permalink: /webtip-wednesday-series-launched-on-twitter/
                             <i class="fa fa-caret-down"></i>
                         </button>
                         <div class="dropdown-content">
-                            <a href="https://stm-2018.github.io/vidcareer">VidCareer</a>
-                            <a href="https://stm-2018.github.io/an-android-app-for-an-educational-poker-platform">An Android App for an Educational Poker Platform</a>
-                            <a href="https://stm-2018.github.io/tagnav">TagNav</a>
-                            <a href="https://stm-2018.github.io/my-personal-portfolio">My Personal Portfolio</a>
+                            <a href="https://sybilmayard.tech/vidcareer">VidCareer</a>
+                            <a href="https://sybilmayard.tech/an-android-app-for-an-educational-poker-platform">An Android App for an Educational Poker Platform</a>
+                            <a href="https://sybilmayard.tech/tagnav">TagNav</a>
+                            <a href="https://sybilmayard.tech/my-personal-portfolio">My Personal Portfolio</a>
                         </div>
                     </div>
                     <div class="dropdown">
@@ -81,13 +81,13 @@ permalink: /webtip-wednesday-series-launched-on-twitter/
                             <i class="fa fa-caret-down"></i>
                         </button>
                         <div class="dropdown-content">
-                            <a href="https://stm-2018.github.io/6-reasons-to-use-shopify">6 Reasons Why You Should Be Using Shopify</a>
-                            <a href="https://stm-2018.github.io/webtip-wednesday-series-launched-on-twitter">WebTip Wednesday Series Launched on Twitter</a>
-                            <a href="https://stm-2018.github.io/5-best-tools-for-remote-working">5 Best Tools For Remote Working</a>
-                            <a href="https://stm-2018.github.io/6-tips-for-surviving-remote-working">6 Tips For Surviving Remote Working</a>
+                            <a href="https://sybilmayard.tech/6-reasons-to-use-shopify">6 Reasons Why You Should Be Using Shopify</a>
+                            <a href="https://sybilmayard.tech/webtip-wednesday-series-launched-on-twitter">WebTip Wednesday Series Launched on Twitter</a>
+                            <a href="https://sybilmayard.tech/5-best-tools-for-remote-working">5 Best Tools For Remote Working</a>
+                            <a href="https://sybilmayard.tech/6-tips-for-surviving-remote-working">6 Tips For Surviving Remote Working</a>
                         </div>
                     </div>
-                    <a href="https://stm-2018.github.io/contact">Contact</a>
+                    <a href="https://sybilmayard.tech/contact">Contact</a>
                     <a href="javascript:void(0);" class="icon" onclick="myFunction()">
                         <i class="fa fa-bars"></i>
                     </a>
@@ -116,7 +116,7 @@ permalink: /webtip-wednesday-series-launched-on-twitter/
                     <h3>Would You Like To Start A Project With Me?</h3>
                     <p class="padding-bottom">Please click the contact button to get in touch with me about your requirements. 
                             I look forward to hearing more about your exciting project.</p>
-                    <div class="center padding-bottom"><a class="btn-contact" href="https://stm-2018.github.io/contact">Contact Me</a></div>
+                    <div class="center padding-bottom"><a class="btn-contact" href="https://sybilmayard.tech/contact">Contact Me</a></div>
         </div>
         <div class="footer section">
             <div class="container-1200">
@@ -129,11 +129,11 @@ permalink: /webtip-wednesday-series-launched-on-twitter/
                     <div class="col-3">
                         <h4>Links</h4>
                         <p><a href="/">Home</a></p>
-                        <p><a href="https://stm-2018.github.io/about">About</a></p>
-                        <p><a href="https://stm-2018.github.io/services">Services</a></p>
-                        <p><a href="https://stm-2018.github.io/contact">Contact</a></p>
-                        <p><a href="https://stm-2018.github.io/terms-and-conditions">Terms and Conditions</a></p>
-                        <p><a href="https://stm-2018.github.io/privacy-policy">Privacy Policy</a></p>
+                        <p><a href="https://sybilmayard.tech/about">About</a></p>
+                        <p><a href="https://sybilmayard.tech/services">Services</a></p>
+                        <p><a href="https://sybilmayard.tech/contact">Contact</a></p>
+                        <p><a href="https://sybilmayard.tech/terms-and-conditions">Terms and Conditions</a></p>
+                        <p><a href="https://sybilmayard.tech/privacy-policy">Privacy Policy</a></p>
                     </div>
                     <div class="col-3">
                         <h4>Services</h4>
@@ -156,13 +156,13 @@ permalink: /webtip-wednesday-series-launched-on-twitter/
                                 <i class="fab fa-instagram"></i></a>
                         </p>
                         <div><a href="https://fsb.org.uk" target="_blank" rel="noopener norefrerer">
-                            <img src="https://stm-2018.github.io/images/FSB-Member-Logo-White.png" 
+                            <img src="https://sybilmayard.tech/images/FSB-Member-Logo-White.png" 
                                 alt="FSB logo"></a></div>
                         <div><a href="https://shopify.co.uk" target="_blank" rel="noopener noreferrer">
-                            <img src="https://stm-2018.github.io/images/shopify-partners-logo.png" alt="Shopify Partners logo"></a></div>                        
+                            <img src="https://sybilmayard.tech/images/shopify-partners-logo.png" alt="Shopify Partners logo"></a></div>                        
                     </div>
                 </div>
-                <div class="logo"><img src="https://stm-2018.github.io/images/sybiltech-logo-transparent.png" alt="Sybiltech logo">
+                <div class="logo"><img src="https://sybilmayard.tech/images/sybiltech-logo-transparent.png" alt="Sybiltech logo">
                     <p class="center"><a href="#">Back to top</a></p>
             </div>
             </div>
