Correct link to GradPost article on vidcareer.html

--- a/vidcareer.html
+++ b/vidcareer.html
@@ -121,7 +121,7 @@ permalink: /vidcareer/
                 <ul>
                     <li><a href="https://www.kent.ac.uk/news/society/17829/big-ideas-competition-winner-goes-to-global-competition" target="_blank" rel="noopener noreferrer">Big Ideas Competition Winner goes to Global Competition</a></li>
                     <li><a href="http://www.vtkwglobal.com/2018/finalists" target="_blank" rel="noopener noreferrer">2018 VT Global Entrepreneur Challenge Finalists</a></li>
-                    <li><a href="/https://sybilmayard.tech/uploads/BT_127973_GradPost%20Winter%202018_FINAL_web.pdf" target="_blank" rel="noopener noreferrer">The GradPost, Winter 2018 Edition</a></li>
+                    <li><a href="https://sybilmayard.tech/uploads/BT_127973_GradPost%20Winter%202018_FINAL_web.pdf" target="_blank" rel="noopener noreferrer">The GradPost, Winter 2018 Edition</a></li>
                 </ul>
 
                 <h2>Market Research</h2>
