Update social sharing image preview

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ permalink: /
             for SMEs in Shopify, Squarespace, WordPress and Wix. Contact me for a free consultation or website review." />
         <meta property="og:url" content="https://sybilmayard.tech/" />
         <meta property="og:site_name" content="Sybiltech" />
-        <meta property="og:image" content="https://sybilmayard.tech/favicon.png" />
+        <meta property="og:image" content="https://sybilmayard.tech/images/sybiltech-logo-social.jpeg" />
         <meta name="twitter:card" content="summary_large_image" />
         <meta name="twitter:creator" content="@Sybiltech1" />
         <meta name="twitter:site" content="@sybiltech1" />
