--- a/tagnav.html
+++ b/tagnav.html
@@ -25,7 +25,7 @@ permalink: /tagnav/
         <meta property="og:description" content="STagNav is an app concept which helps students find and attend social events, tackling the feelings of isolation and depression associated with uni life." />
         <meta property="og:url" content="https://sybilmayard.tech/tagnav/" />
         <meta property="og:site_name" content="Sybiltech" />
-        <meta property="og:image" content="https://sybilmayard.tech/favicon.png" />
+        <meta property="og:image" content="https://sybilmayard.tech/images/sybiltech-logo-social.jpeg" />
         <meta name="twitter:card" content="summary_large_image" />
         <meta name="twitter:creator" content="@Sybiltech1" />
         <meta name="twitter:site" content="@sybiltech1" />
