--- a/5-best-tools-for-remote-working.html
+++ b/5-best-tools-for-remote-working.html
@@ -24,7 +24,7 @@ permalink: /5-best-tools-for-remote-working/
         <meta property="og:description" content="Remote working tools have recently grown in popularity, but which ones are the best for you? Read my article on my 5 favourite tools." />
         <meta property="og:url" content="https://sybilmayard.tech/5-best-tools-for-remote-working/" />
         <meta property="og:site_name" content="Sybiltech" />
-        <meta property="og:image" content="https://sybilmayard.tech/favicon.png" />
+        <meta property="og:image" content="https://sybilmayard.tech/images/sybiltech-logo-social.jpeg" />
         <meta name="twitter:card" content="summary_large_image" />
         <meta name="twitter:creator" content="@Sybiltech1" />
         <meta name="twitter:site" content="@sybiltech1" />
