--- a/6-reasons-to-use-shopify.html
+++ b/6-reasons-to-use-shopify.html
@@ -24,7 +24,7 @@ permalink: /6-reasons-to-use-shopify/
         <meta property="og:description" content="Shopify is one of the most popular e-commerce platforms on the market. Read this blog to find out why you should be using Shopify." />
         <meta property="og:url" content="https://sybilmayard.tech/6-reasons-to-use-shopify/" />
         <meta property="og:site_name" content="Sybiltech" />
-        <meta property="og:image" content="https://sybilmayard.tech/favicon.png" />
+        <meta property="og:image" content="https://sybilmayard.tech/images/sybiltech-logo-social.jpeg" />
         <meta name="twitter:card" content="summary_large_image" />
         <meta name="twitter:creator" content="@Sybiltech1" />
         <meta name="twitter:site" content="@sybiltech1" />
