--- a/an-android-app-for-an-educational-poker-platform.html
+++ b/an-android-app-for-an-educational-poker-platform.html
@@ -24,7 +24,7 @@ permalink: /an-android-app-for-an-educational-poker-platform/
         <meta property="og:description" content="Sybil Mayard's final MSc project was a Texas Hold'em Poker Android app that teaches you how to play by recommending the best action to take at each round." />
         <meta property="og:url" content="https://sybilmayard.tech/an-android-app-for-an-educational-poker-platform/" />
         <meta property="og:site_name" content="Sybiltech" />
-        <meta property="og:image" content="https://sybilmayard.tech/favicon.png" />
+        <meta property="og:image" content="https://sybilmayard.tech/images/sybiltech-logo-social.jpeg" />
         <meta name="twitter:card" content="summary_large_image" />
         <meta name="twitter:creator" content="@Sybiltech1" />
         <meta name="twitter:site" content="@sybiltech1" />
