--- a/blog.html
+++ b/blog.html
@@ -27,7 +27,7 @@ permalink: /blog/
         action to take at each round." />
         <meta property="og:url" content="https://sybilmayard.tech/blog/" />
         <meta property="og:site_name" content="Sybiltech" />
-        <meta property="og:image" content="https://sybilmayard.tech/favicon.png" />
+        <meta property="og:image" content="https://sybilmayard.tech/images/sybiltech-logo-social.jpeg" />
         <meta name="twitter:card" content="summary_large_image" />
         <meta name="twitter:creator" content="@Sybiltech1" />
         <meta name="twitter:site" content="@sybiltech1" />
