--- a/clients.html
+++ b/clients.html
@@ -24,7 +24,7 @@ permalink: /clients/
         <meta property="og:description" content="Sybil Mayard has worked with a range of clients, providing the services needed to help them achieve their business goals. See a selection of projects here." />
         <meta property="og:url" content="https://sybilmayard.tech/clients/" />
         <meta property="og:site_name" content="Sybiltech" />
-        <meta property="og:image" content="https://sybilmayard.tech/favicon.png" />
+        <meta property="og:image" content="https://sybilmayard.tech/images/sybiltech-logo-social.jpeg" />
         <meta name="twitter:card" content="summary_large_image" />
         <meta name="twitter:creator" content="@Sybiltech1" />
         <meta name="twitter:site" content="@sybiltech1" />
