--- a/my-personal-portfolio.html
+++ b/my-personal-portfolio.html
@@ -24,7 +24,7 @@ permalink: /my-personal-portfolio/
         <meta property="og:description" content="Sybil Mayard's personal portfolio is a site created with WordPress, showcasing her skills in music, photography and graphic design. Read more about it here." />
         <meta property="og:url" content="https://sybilmayard.tech/my-personal-portfolio/" />
         <meta property="og:site_name" content="Sybiltech" />
-        <meta property="og:image" content="https://sybilmayard.tech/favicon.png" />
+        <meta property="og:image" content="https://sybilmayard.tech/images/sybiltech-logo-social.jpeg" />
         <meta name="twitter:card" content="summary_large_image" />
         <meta name="twitter:creator" content="@Sybiltech1" />
         <meta name="twitter:site" content="@sybiltech1" />
