--- a/terms-and-conditions.html
+++ b/terms-and-conditions.html
@@ -26,7 +26,7 @@ permalink: /terms-and-conditions/
             for SMEs in Shopify, Squarespace, WordPress and Wix. Read my terms and conditions here." />
         <meta property="og:url" content="https://sybilmayard.tech/terms-and-conditions/" />
         <meta property="og:site_name" content="Sybiltech" />
-        <meta property="og:image" content="https://sybilmayard.tech/favicon.png" />
+        <meta property="og:image" content="https://sybilmayard.tech/images/sybiltech-logo-social.jpeg" />
         <meta name="twitter:card" content="summary_large_image" />
         <meta name="twitter:creator" content="@Sybiltech1" />
         <meta name="twitter:site" content="@sybiltech1" />
