--- a/webtip-wednesday-series-launched-on-twitter.html
+++ b/webtip-wednesday-series-launched-on-twitter.html
@@ -24,7 +24,7 @@ permalink: /webtip-wednesday-series-launched-on-twitter/
         <meta property="og:description" content="&quot;WebTip Wednesday&quot; is a new series of tweets for website development. Be sure not to miss a tweet by following Sybiltech on Twitter: twitter.com/Sybiltech1." />
         <meta property="og:url" content="https://sybilmayard.tech/webtip-wednesday-series-launched-on-twitter/" />
         <meta property="og:site_name" content="Sybiltech" />
-        <meta property="og:image" content="https://sybilmayard.tech/favicon.png" />
+        <meta property="og:image" content="https://sybilmayard.tech/images/sybiltech-logo-social.jpeg" />
         <meta name="twitter:card" content="summary_large_image" />
         <meta name="twitter:creator" content="@Sybiltech1" />
         <meta name="twitter:site" content="@sybiltech1" />
